[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Locations/BasicMapObject.gd" type="Script" id=1]

[node name="Area2D" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 0, -120, -180, -90, -240, 0, -180, 90, 0, 120, 180, 90, 240, 0, 180, -90 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2
input_pickable = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 0, -26 )
scale = Vector2( 5.25, 5.3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -140, -448 )
rect = Rect2( -10, -10, 300, 500 )

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
[connection signal="input_event" from="StaticBody2D" to="." method="_on_StaticBody2D_input_event"]
[connection signal="mouse_entered" from="StaticBody2D" to="." method="_on_StaticBody2D_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody2D" to="." method="_on_StaticBody2D_mouse_exited"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
